data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectBranchTargetResolution_3937.wast
;; 6. **Nested Branching with call_indirect**:    - Execute nested branching instructions involving multiple `call_indirect` instructions, with varying complexities in dynamic type checking.    - Checks for: Correct branch target resolution amidst complex branching and stack integrity.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (type (func (param i32 i32) (result i32)))
    (table 2 funcref)
    (elem (i32.const 0) 1)
    (func $f1 (type 1) (param i32 i32) (result i32)
      (i32.add (local.get 0) (local.get 1))
    )
    (func $main (param i32) (result i32)
      (local.get 0)
      (block (result i32)
        (br_if 0 (i32.eqz (local.get 0)))
        (call_indirect (type 1) (i32.const 0) (local.get 0) (local.get 0)))))
  "type mismatch"
)